Add core team members list and services

--- a/templates/index.html
+++ b/templates/index.html
@@ -193,5 +193,105 @@
     </div>
   </div>
 
+
+  <div class="section map z-depth-1">
+    <div class="container white-text">
+      <div class="row" style="margin-top: 32px">
+        <div class="col s12 m6">
+          <h2 class="">Team</h2>
+        </div>
+      </div>
+      <div class="row">
+        <p>We have our roots in the Robotics Club of Estonian IT College as
+          several key memebers are graduates of the College and were active Robotics Club members in the past.
+          Most of us have numerous years of work experience in ICT sector and we've travelled the world to see how hackerspaces and makerspaces operate.
+          We know that we've got what it takes to operate k-space.
+        </p>
+
+        <div class="col s12 m7 l3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/8/000/1ad/2da/203cd14.jpg">
+            </div>
+            <div class="card-content">
+              <div class="card-title">Lauri Võsandi</div>
+              <p style="text-align: justify; max-height: 120px; overflow: auto;">Master of disaster</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4 l3 black-text">
+          <div class="card">
+              <div class="card-image">
+                <img src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAetAAAAJDA1ZTNlMTA0LTJlZTEtNGM1NC05YzE3LTI4NDg0MzhmMjE5MQ.jpg"/>
+              </div>
+            <div class="card-content">
+
+              <div class="card-title">Allan Vein</div>
+              <p style="text-align: justify; max-height: 120px; overflow: auto;">Mr inappropriate</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4 l3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="http://www.mesinikeliit.ee/wp-content/uploads/2016/10/Erki_kellaga.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Erki Naumanis</div>
+              <p style="text-align: justify; max-height: 120px; overflow: auto;">The beekeeper</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4 l3 black-text">
+          <div class="card">
+            <div class="card-image">
+              <img src="https://pbs.twimg.com/profile_images/2548581494/2011-06-22--02-timmu-and-laes_400x400.jpg"/>
+            </div>
+            <div class="card-content">
+              <div class="card-title">Priit Laes</div>
+              <p style="text-align: justify; max-height: 120px; overflow: auto;">The embedded Linux guy</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <p>Interested in joining the core team? Give Lauri a call and schedule for a visit.</p>
+    </div>
+  </div>
+
+  <div class="container black-text">
+    <div class="row" style="margin-top: 32px">
+      <div class="col s12 m6">
+        <h2 class="" id="services">Services</h2>
+      </div>
+    </div>
+    <div class="row">
+      <p>We offer variety of interesting paid options for your company:</p>
+
+      <ul class="browser-default">
+        <li>Organize your corporate event at our place. We can help with the entertainment and you have opportunity to meet new potential employees.</li>
+        <li>Rent our gadgets and toys for a corporate event, eg sumorobots in your company's booth at a conference</li>
+        <li>Invite us to come and fill in with the entertainment portion of your corporate event</li>
+        <li>Location and equipment to carry out trainings ranging from Arduino-s, Raspberry Pi-s to radiocommunications and networking</li>
+        <li>Provide your employees location and equipment to engage in hobby activities eg. 3D printing and building quadricopters</li>
+        <li>Let us help with headhunting - provide us with a detailed description of what kind of people you're looking for and we'll help you to find them. Set up a roll-up stand at our hackerspace for more visibility. Send us your challenges, perhaps someone from here would like to tackle it.</li>
+        <li>Corporate visibility at international robotics competiton Robotex. Our hackerspace members have participated repeatedly at the Robotex in the past. In 2018 we're planning to participate in the basketball robots and ICD grand challenge categories.</li>
+      </ul>
+
+      <p>For individuals:</p>
+
+      <ul class="browser-default">
+        <li>Environment to learn about the latest trends in IT and tech down to the hardware and electronics level</li>
+        <li>Location for you interest group activities</li>
+        <li>Office space for your personal projects or freelance work. Renting a whole office on your own might not make sense, why not join us?</li>
+      </ul>
+
+      <p>Contact Lauri via e-mail address below for more information</p>
+
+
+    </div>
+  </div>
+
   <br>
 {% endblock %}
