--- a/templates/base_footer.html
+++ b/templates/base_footer.html
@@ -46,7 +46,13 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          © 2017 k-space.ee
+          © 2017 K-SPACE MTÜ<br/>
+          Registration number 80397632<br/>
+          IBAN EE467700771002926893
+          <br/>
+          <br/>
+          <br/>
+          <br/>
         </div>
       </div>
     </footer>
