--- a/templates/hall_of_fame.html
+++ b/templates/hall_of_fame.html
@@ -16,7 +16,7 @@
                 <a href="/profile/{{ user.username }}"><img src='/media/{{ user.profile.icon }}'></a>
               </div>
               <h5 class="card-title" style="padding-top: 10px;color:black;"><a class='darklink'
-                                                                               href="/profile/{{ user.username }}"><b>{{ user.username }}</b></a>
+                                                                               href="/profile/{{ user.username }}"><b>{{ user.first_name }} {{ user.last_name }}</b></a>
               </h5>
               <div class="row">
                 <div class="col s12 m1">
