--- a/staticfiles/css/index.css
+++ b/staticfiles/css/index.css
@@ -8,8 +8,6 @@ h1, h2 {
 
 .headerblock {
   height: 25em;
-  /*background-image: url("http://robot.itcollege.ee/assets/img/sumoesp-soldered.jpg");*/
-  /*background-size: cover;*/
   position: relative;
   overflow: hidden;
   z-index: 0;
@@ -75,9 +73,6 @@ ul {
     font-size: 14pt;
 }
 
-a:link, a:visited {
-    color: white;
-}
 
 a:hover {
     color: #34495e;
@@ -88,4 +83,25 @@ a:active {
 }
 a.highlight:hover{
   color: #3498db;
+}
+
+.card-title {
+  white-space: nowrap;
+}
+
+.gallery {
+  padding: 0 auto;
+  white-space: nowrap;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+  overflow-x: scroll;
+}
+
+.gallery img {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  max-height: 100%;
 }
