--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -10,28 +10,24 @@
     <div class="row">
       {% for challenge in challenges %}
         <div class="col s12 m4">
-          <div class="card" style="height:350px;">
-            <div class="card-content">
-              <div class="row" style="height:210px;">
-                <div class="col s12 m12">
-                  <div class="card-title"><b>{{ challenge.name }}</b></div>
-                  <p style="text-align: justify; max-height: 120px; overflow: auto;">{{ challenge.description }}</p>
-                  <div style="padding-top: 15px;">
-                    {% for tag in challenge.tags.all %}
-                      <div class="chip">{{ tag.name }}</div>
-                    {% endfor %}
-                  </div>
-                </div>
-              </div>
-              </br>
-              <div class="row">
-                <div class="col s12 m12">
-                  <div class="center-align">
-                    <a href="/challenge/{{ challenge.id }}" class="btn-large">I can do it</a>
-                  </div>
-                </div>
+          <div class="card">
+
+
+            <div class="card-content" style="overflow: hidden; height:150px;">
+              <div class="card-title"><b>{{ challenge.name }}</b></div>
+              <p style="text-align: justify;">{% if challenge.blurb %}{{ challenge.blurb }}{% else %}{{ challenge.description|slice:":500" }}{% endif %}</p>
+              <div style="padding-top: 15px;">
+                {% for tag in challenge.tags.all %}
+                  <div class="chip">{{ tag.name }}</div>
+                {% endfor %}
               </div>
             </div>
+
+
+            <div class="card-action">
+              <a href="/challenge/{{ challenge.id }}" class="btn-large">I can do it</a>
+            </div>
+	
           </div>
         </div>
       {% endfor %}
