--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 {% extends 'base_footer.html' %}
 {% block base_footer %}
   <div class="header section center-align">
-    <h1 class="section darken-2 z-depth-1 white-text"><a href="/">k-space.ee</a></h1>
+    <h1 class="section darken-2 z-depth-1 white-text"><a href="/" class="lightlink">k-space.ee</a></h1>
   </div>
 
   {% block content %}
