--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -23,9 +23,8 @@
               </div>
             </div>
 
-
             <div class="card-action">
-              <a href="/challenge/{{ challenge.id }}" class="btn-large">I can do it</a>
+              <a href="/challenge/{{ challenge.id }}" class="btn-large lightlink">I can do it</a>
             </div>
 	
           </div>
