--- a/templates/hall_of_fame.html
+++ b/templates/hall_of_fame.html
@@ -8,6 +8,7 @@
 
   <div class="row container section">
     {% for user in users %}
+      {% if user.first_name or user.last_name %}
       <div class="col s12 m4">
         <div class="section center-align">
           <div class="card">
@@ -15,8 +16,8 @@
               <div class="card-image">
                 <a href="/profile/{{ user.username }}"><img src='/media/{{ user.profile.icon }}'></a>
               </div>
-              <h5 class="card-title" style="padding-top: 10px;color:black;"><a class='darklink'
-                                                                               href="/profile/{{ user.username }}"><b>{{ user.first_name }} {{ user.last_name }}</b></a>
+              <h5 class="card-title" style="padding-top: 10px;color:black;">
+                <a class='darklink' href="/profile/{{ user.username }}"><b>{{ user.first_name }} {{ user.last_name }}</b></a>
               </h5>
               <div class="row">
                 <div class="col s12 m1">
@@ -43,6 +44,7 @@
           </div>
         </div>
       </div>
+      {% endif %}
     {% endfor %}
   </div>
 {% endblock %}
